
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2006-12-07 DP  1.6.2  Add '...' to truncated column comments in table SQL, per
                      Erwin Brandstetter.
2006-12-05 DP  1.6.2  Properly size the backup dialog, per Patrick Headley.
2006-12-05 DP  1.6.2  Ensure column headers and the insert row are shown in the
                      edit grid when no rows exist in the table being editted,
                      per Bob Pawley.
2006-12-05 DP  1.6.2  Restore dialog sizes correctly.
2006-12-04 DP  1.6.2  Build against PostgreSQL 8.2 on Windows
2006-12-01 DP  1.6.2  Fix some oddities in the way current per-table vacuum
                      settings are displayed
2006-12-01 DP  1.6.2  Fix per-table autovacuum settings for PostgreSQL >= 8.2
                      per Devrim Gunduz
2006-12-01 DP  1.6.2  Prevent the filter/sort options dialogue being opened
                      when data is being refreshed, per Erwin
2006-11-29 DP  1.6.1  Prevent a crash from the query too when using File -> 
                      Exit on GTK
2006-11-29 DP  1.6.1  Don't paste into empty edit grids, per Howard Wang
2006-11-29 DP  1.6.1  Guard against permission denied errors in the edit grid
                      per Howard Wang
2006-11-29 DP  1.6.1  Fix some portability issues in the configure code [Max
                      Khon]
2006-11-28 DP  1.6.1  Properly quote function parameter names, per Ken Priest.
2006-11-28 DP  1.6.1  Don't display index constraints under the Indexes node
                      as well as the Contraints node, per Erwin.
2006-11-27 DP  1.6.1  Fix a minor bug in the index reverse engineering when
                      using non-default operator classes per Andrus.