@@ -35,6 +35,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-12-07 DP  1.6.2  Reverse engineer columns with multi-word names (like
+                      'timestamp with timezone') correctly so that precision
+                      and array modifiers are included properly. Per Erwin.
 2006-12-07 DP  1.6.2  Add '...' to truncated column comments in table SQL, per
                       Erwin Brandstetter.
 2006-12-05 DP  1.6.2  Properly size the backup dialog, per Patrick Headley.
